--- a/src/app/power-component/human-component/human-component.component.html
+++ b/src/app/power-component/human-component/human-component.component.html
@@ -1,9 +1,9 @@
 <p>
-  human
-</p>
-<p>
   power level: {{ powerlevel }}
 </p>
-<p>
-  {{ powermessage }}
-</p>
+
+<div *ngIf="powermessage">
+    <hr>
+    {{ powermessage }}
+  </div>
+  
