--- a/src/app/power-component/power-component.component.html
+++ b/src/app/power-component/power-component.component.html
@@ -1,4 +1,4 @@
-<hr><hr>
+<!-- hr -->
 <form (submit)="updatePowLev()">
   <label>
     Power level
@@ -7,14 +7,56 @@
   <input type='submit' value='calculate power levels!'>
 </form>
 <hr><hr>
-<app-human-component [powerlevel]='currentPowerLevel' [powermessage]='getLevelMessage(1)'></app-human-component>
-<hr>
-<app-sayan-component [powerlevel]='currentPowerLevel * 10' [powermessage]='getLevelMessage(10)'></app-sayan-component>
-<hr>
-<app-super-sayan-component [powerlevel]='currentPowerLevel * 90'  [powermessage]='getLevelMessage(90)'></app-super-sayan-component>
-<hr>
-<app-super-sayan-two-component [powerlevel]='currentPowerLevel * 150'  [powermessage]='getLevelMessage(150)'></app-super-sayan-two-component>
-<hr>
-<app-super-sayan-three-component [powerlevel]='currentPowerLevel * 250'  [powermessage]='getLevelMessage(250)'></app-super-sayan-three-component>
-<hr>
-<app-super-sayan-four-component [powerlevel]='currentPowerLevel * 500'  [powermessage]='getLevelMessage(500)'></app-super-sayan-four-component>
+
+<!-- hr -->
+<fieldset>
+  <app-human-component [powerlevel]='currentPowerLevel' [powermessage]='getLevelMessage(1)'></app-human-component>
+  <legend><span class='hilight'>
+    Human
+  </span></legend>
+</fieldset>
+<!-- hr -->
+
+<fieldset>
+  <legend><span class='hilight'>
+    Sayan
+  </span></legend>
+  <app-sayan-component [powerlevel]='currentPowerLevel * 10' [powermessage]='getLevelMessage(10)'>   
+  </app-sayan-component>
+</fieldset>
+<!-- hr -->
+
+<fieldset>
+  <legend><span class='hilight'>
+    Super Sayan
+  </span></legend>
+  <app-super-sayan-component [powerlevel]='currentPowerLevel * 90'  [powermessage]='getLevelMessage(90)'>   
+  </app-super-sayan-component>
+</fieldset>
+<!-- hr -->
+
+<fieldset>
+  <legend><span class='hilight'>
+    Super Sayan II
+  </span></legend>
+  <app-super-sayan-two-component [powerlevel]='currentPowerLevel * 150'  [powermessage]='getLevelMessage(150)'>   
+  </app-super-sayan-two-component>
+</fieldset>
+<!-- hr -->
+
+<fieldset>
+  <legend><span class='hilight'>
+    Super Sayan III
+  </span></legend>
+  <app-super-sayan-three-component [powerlevel]='currentPowerLevel * 250'  [powermessage]='getLevelMessage(250)'>   
+  </app-super-sayan-three-component>
+</fieldset>
+<!-- hr -->
+
+<fieldset>
+  <legend><span class='hilight'>
+    Super Sayan IV
+  </span></legend>
+  <app-super-sayan-four-component [powerlevel]='currentPowerLevel * 500'  [powermessage]='getLevelMessage(500)'>
+  </app-super-sayan-four-component>
+</fieldset>
