--- a/src/app/power-component/super-sayan-component/super-sayan-component.component.html
+++ b/src/app/power-component/super-sayan-component/super-sayan-component.component.html
@@ -4,6 +4,7 @@
 <p>
     power level: {{ powerlevel }}
 </p>
-<p>
-  {{ powermessage }}
-</p>
+<div *ngIf="powermessage">
+    <hr>
+    {{ powermessage }}
+</div>
